force-app/main/default/objects/loan__Other_Transaction__c/fields/Final_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Final_Interest_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Interest Rate</label>
    <type>Checkbox</type>
</CustomField>