force-app/main/default/objects/loan__Other_Transaction__c/fields/Include_in_Summary__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Summary__c</fullName>
    <formula>IF(ISPICKVAL(loan__Transaction_Type__c,&apos;Rate Change&apos;) &amp;&amp; (loan__Txn_Date__c-loan__Loan_Account__r.loan__Branch__r.loan__Current_System_Date__c) &lt;= 365, true, (IF(AND(ISBLANK(loan__Loan_Account__r.Statement_Start_Date__c), ISBLANK(loan__Loan_Account__r.Statement_End_Date__c)), TRUE, IF(AND(!ISBLANK(loan__Loan_Account__r.Statement_Start_Date__c), ISBLANK(loan__Loan_Account__r.Statement_End_Date__c)), TRUE, IF(AND(ISBLANK(loan__Loan_Account__r.Statement_Start_Date__c), !ISBLANK(loan__Loan_Account__r.Statement_End_Date__c)), TRUE,
IF(AND(loan__Txn_Date__c&gt;=loan__Loan_Account__r.Statement_Start_Date__c,loan__Txn_Date__c&lt;=loan__Loan_Account__r.Statement_End_Date__c), TRUE, FALSE))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Summary</label>
    <type>Checkbox</type>
</CustomField>