force-app/main/default/objects/loan__Other_Transaction__c/fields/Last_Interest_Before_Statement__c.field-meta.xml
<CustomField>
    <fullName>Last_Interest_Before_Statement__c</fullName>
    <label>Last Interest Before Statement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>