force-app/main/default/objects/loan__Other_Transaction__c/fields/Last_Interest_Rate_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interest_Rate_Changed_Date__c</fullName>
    <label>Last Interest Rate Changed Date</label>
    <type>Date</type>
</CustomField>