force-app/main/default/objects/loan__Other_Transaction__c/fields/Latest_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Latest_Rate_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest Rate Change?</label>
    <type>Checkbox</type>
</CustomField>