force-app/main/default/objects/loan__Other_Transaction__c/fields/Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change__c</fullName>
    <formula>IF((CONTAINS(MID(loan__Description__c, (FIND(&apos;Int Rt:&apos;, loan__Description__c, 0)+7), 7), (MID(loan__Description__c, (FIND(&apos;Int Rt:&apos;, loan__Description__c, (FIND(&apos;Int Rt:&apos;, loan__Description__c, 0)+7))+7), 5)))), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Changed?</label>
    <type>Checkbox</type>
</CustomField>