force-app/main/default/objects/loan__Other_Transaction__c/fields/Rate_Changed__c.field-meta.xml
<CustomField>
    <fullName>Rate_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Changed?</label>
    <type>Checkbox</type>
</CustomField>