force-app/main/default/objects/loan__Other_Transaction__c/validationRules/Block_Redraw_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Redraw_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(loan__Loan_Account__r.Restrict_Redraw__c,ISPICKVAL(loan__Transaction_Type__c,&apos;Deposit Adjustment - Subtract&apos;)),TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Redraw is restricted for this CL Contract!</errorMessage>
</ValidationRule>